fixed overflow issue in cookies article in mobile

--- a/src/styles/components/cookies/_cookies.scss
+++ b/src/styles/components/cookies/_cookies.scss
@@ -2,7 +2,6 @@
 #cookiesArticle {
   font-size: 16px;
   line-height: 1.6;
-  max-width: 800px;
 
   > span > p, ol {
     font-weight: 100;
